# nfl

./: .gitignore  README.md  nfl.py  pyproject.toml  requirements.txt
.cache/: season2020.cache  season2021.cache  season2022.cache
.github/workflows/: python-app.yml  python.yml
src/: nfl.py
tests/: conftest.py  pytest.ini  saveCache.py  testSeason.py  testWeek.py
